included namespace for secret, consolidated all scripting templates into single locals
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -227,7 +227,7 @@ email_address = ""
 secret_id     = "ocid1.vaultsecret..."
 username      = ""
 
-secret_ns = "default"
+secret_namespace = "default"
 
 # calico
 enable_calico  = false
