updated quickstart docs so users can start testing
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -12,6 +12,7 @@ label_prefix   = "dev"
 
 # ssh keys
 ssh_private_key_path = "~/.ssh/id_rsa"
+ssh_public_key       = ""
 ssh_public_key_path  = "~/.ssh/id_rsa.pub"
 
 # networking
