--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -173,16 +173,17 @@ availability_domains = {
 admission_controller_options = {
   PodSecurityPolicy = false
 }
-allow_node_port_access      = false
-allow_worker_ssh_access     = true
-cluster_name                = "oke"
-check_node_active           = "none"
-control_plane_access        = "public"
-control_plane_access_source = ["0.0.0.0/0", "8.8.8.8/32"]
-dashboard_enabled           = false
-kubernetes_version          = "v1.20.8"
-pods_cidr                   = "10.244.0.0/16"
-services_cidr               = "10.96.0.0/16"
+allow_node_port_access       = false
+allow_worker_internet_access = true
+allow_worker_ssh_access      = true
+cluster_name                 = "oke"
+check_node_active            = "none"
+control_plane_access         = "public"
+control_plane_access_source  = ["0.0.0.0/0", "8.8.8.8/32"]
+dashboard_enabled            = false
+kubernetes_version           = "v1.20.8"
+pods_cidr                    = "10.244.0.0/16"
+services_cidr                = "10.96.0.0/16"
 
 ## oke cluster container image policy and keys
 use_signed_images = false
