--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -11,9 +11,15 @@ compartment_id = "ocid1.compartment.oc1.."
 label_prefix   = "dev"
 
 # ssh keys
+
 ssh_private_key_path = "~/.ssh/id_rsa"
-ssh_public_key       = ""
-ssh_public_key_path  = "~/.ssh/id_rsa.pub"
+
+# Set corresponding public key either using the path (ssh_public_key_path) or using the key itself (ssh_public_key).
+# Set the other to "".
+# ssh_public_key       = "ssh-rsa AAAAB....."
+# ssh_public_key       = ""
+# ssh_public_key_path  = "none"
+# ssh_public_key_path = "~/.ssh/id_rsa.pub"
 
 # networking
 create_drg       = false
