--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -25,39 +25,31 @@ ssh_private_key_path = "~/.ssh/id_rsa"
 create_drg       = false
 drg_display_name = "drg"
 enable_waf       = false
-internet_gateway_route_rules = [
-  #   {
-  #   destination = "8.8.8.0/24"
-  #   destination_type = "CIDR_BLOCK"
-  #   network_entity_id = "internet_gateway" // use Internet Gateway created by this module. Requires `internet_gateway_enabled = true`
-  #   description = "route through Internet Gateway"
-  # }
-  /*
-    {
-      destination = "192.168.1.0/24"
-      destination_type = "CIDR_BLOCK"
-      network_entity_id = "drg" // use drg created by this module. Requires `create_drg = true`
-      description = "route through drg"
-    },
-    {
-      destination = "8.8.8.0/24"
-      destination_type = "CIDR_BLOCK"
-      network_entity_id = "internet_gateway" // use Internet Gateway created by this module. Requires `internet_gateway_enabled = true`
-      description = "route through Internet Gateway"
-    },
-    {
-      destination = "8.8.8.0/24"
-      destination_type = "CIDR_BLOCK"
-      network_entity_id = "ocid1.drg." // use an externally created resource or a resource that was not available at the time of the 1st run`
-      description = "route through an externally created resource or a resource that was not available at the time of the 1st run"
-    },
-    {
-      destination       = "192.168.1.0/24"
-      destination_type  = "CIDR_BLOCK"
-      network_entity_id = "ocid1.localpeeringgateway." # <-- edit this OCID
-      description       = "Terraformed - User added Routing Rule: To lpg with lpg_id directly passed by user. Useful for gateways created outside of vcn module"
-    }        
-    */
+internet_gateway_route_rules = [ # this input shows how to pass routing information
+  {
+    destination       = "192.168.0.0/16" # Route Rule Destination CIDR
+    destination_type  = "CIDR_BLOCK"     # only CIDR_BLOCK is supported at the moment
+    network_entity_id = "drg"            # for internet_gateway_route_rules input variable, you can use special strings "drg", "internet_gateway" or pass a valid OCID using string or any Named Values
+    description       = "Terraformed - User added Routing Rule: To drg created by this module. drg_id is automatically retrieved with keyword drg"
+  },
+  {
+    destination       = "172.16.0.0/16"
+    destination_type  = "CIDR_BLOCK"
+    network_entity_id = "drg"
+    description       = "Terraformed - User added Routing Rule: To drg created by this module. drg_id is automatically retrieved with keyword drg"
+  },
+  {
+    destination       = "203.0.113.0/24" # rfc5737 (TEST-NET-3)
+    destination_type  = "CIDR_BLOCK"
+    network_entity_id = "internet_gateway"
+    description       = "Terraformed - User added Routing Rule: To Internet Gateway created by this module. internet_gateway_id is automatically retrieved with keyword internet_gateway"
+  },
+  # {
+  #   destination       = "192.168.1.0/24"
+  #   destination_type  = "CIDR_BLOCK"
+  #   network_entity_id = "ocid1.localpeeringgateway.oc1.aaaaaa" # <-- edit this OCID
+  #   description       = "Terraformed - User added Routing Rule: To lpg with lpg_id directly passed by user. Useful for gateways created outside of vcn module"
+  # },
 ]
 
 # local_peering_gateways = {
@@ -73,39 +65,31 @@ internet_gateway_route_rules = [
 
 lockdown_default_seclist = true
 
-nat_gateway_route_rules = [
-  #   {
-  #   destination = "192.168.1.0/24"
-  #   destination_type = "CIDR_BLOCK"
-  #   network_entity_id = "drg" // use drg created by this module. Requires `create_drg = true`
-  #   description = "route through drg"
+nat_gateway_route_rules = [ # this module input shows how to pass routing information
+  {
+    destination       = "192.168.0.0/16" # Route Rule Destination CIDR
+    destination_type  = "CIDR_BLOCK"     # only CIDR_BLOCK is supported at the moment
+    network_entity_id = "drg"            # for nat_gateway_route_rules input variable, you can use special strings "drg", "nat_gateway" or pass a valid OCID using string or any Named Values
+    description       = "Terraformed - User added Routing Rule: To drg created by this module. drg_id is automatically retrieved with keyword drg"
+  },
+  {
+    destination       = "172.16.0.0/16"
+    destination_type  = "CIDR_BLOCK"
+    network_entity_id = "drg"
+    description       = "Terraformed - User added Routing Rule: To drg created by this module. drg_id is automatically retrieved with keyword drg"
+  },
+  {
+    destination       = "203.0.113.0/24" # rfc5737 (TEST-NET-3)
+    destination_type  = "CIDR_BLOCK"
+    network_entity_id = "nat_gateway"
+    description       = "Terraformed - User added Routing Rule: To NAT Gateway created by this module. nat_gateway_id is automatically retrieved with keyword nat_gateway"
+  },
+  # {
+  #   destination       = "192.168.1.0/24"
+  #   destination_type  = "CIDR_BLOCK"
+  #   network_entity_id = "ocid1.localpeeringgateway.oc1.aaaaaa" # <-- edit this OCID
+  #   description       = "Terraformed - User added Routing Rule: To lpg with lpg_id directly passed by user. Useful for gateways created outside of vcn module"
   # },
-  /*
-    {
-      destination = "192.168.1.0/24"
-      destination_type = "CIDR_BLOCK"
-      network_entity_id = "drg" // use drg created by this module. Requires `create_drg = true`
-      description = "route through drg"
-    },
-    {
-      destination = "8.8.8.0/24"
-      destination_type = "CIDR_BLOCK"
-      network_entity_id = "nat_gateway" // use NAT gateway created by this module. Requires `nat_gateway_enabled = true`
-      description = "route through NAT gateway"
-    },
-    {
-      destination = "8.8.8.0/24"
-      destination_type = "CIDR_BLOCK"
-      network_entity_id = "ocid1.drg." // use an externally created resource or a resource that was not available at the time of the 1st run`
-      description = "route through an externally created resource or a resource that was not available at the time of the 1st run"
-    },
-    {
-      destination       = "192.168.1.0/24"
-      destination_type  = "CIDR_BLOCK"
-      network_entity_id = "ocid1.localpeeringgateway." # <-- edit this OCID
-      description       = "Terraformed - User added Routing Rule: To lpg with lpg_id directly passed by user. Useful for gateways created outside of vcn module"
-    }    
-    */
 ]
 
 nat_gateway_public_ip_id = "none"
@@ -119,7 +103,7 @@ subnets = {
   workers  = { netnum = 1, newbits = 2 }
 }
 
-vcn_cidr      = "10.0.0.0/16"
+vcn_cidrs      = ["10.0.0.0/16"]
 vcn_dns_label = "oke"
 vcn_name      = "vcnoke"
 
