--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -121,8 +121,8 @@ allow_node_port_access       = false
 allow_worker_internet_access = true
 allow_worker_ssh_access      = false
 cluster_name                 = "oke"
-control_plane_access         = "private"
-control_plane_access_source  = ["0.0.0.0/0"]
+control_plane_type         = "private"
+control_plane_allowed_list  = ["0.0.0.0/0"]
 control_plane_nsgs           = []
 dashboard_enabled            = false
 kubernetes_version           = "v1.20.8"
@@ -159,7 +159,7 @@ node_pool_image_id    = "none"
 node_pool_name_prefix = "np"
 node_pool_os          = "Oracle Linux"
 node_pool_os_version  = "7.9"
-worker_mode           = "private"
+worker_type           = "private"
 
 # upgrade of existing node pools
 upgrade_nodepool        = false
@@ -167,11 +167,12 @@ node_pools_to_drain     = ["np1", "np2"]
 nodepool_upgrade_method = "out_of_place"
 
 # oke load balancers
-lb_subnet_type           = "both"
-preferred_lb_subnet_type = "public"
-public_lb_ports   = [80, 443]
-# use a string to specify a range e.g.
-# public_lb_ports   = [80, 443, "9000-9010"] 
+load_balancers            = "both"
+preferred_load_balancer   = "public"
+internal_lb_allowed_list  = ["172.16.1.0/24", "172.16.2.0/24"]
+internal_lb_allowed_ports = [81, 443, "7001-7005"]
+public_lb_allowed_list    = ["0.0.0.0/0"]
+public_lb_allowed_ports   = [443,"9001-9002"]
 
 # ocir
 email_address    = ""
