--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -159,6 +159,7 @@ node_pool_image_id    = "none"
 node_pool_name_prefix = "np"
 node_pool_os          = "Oracle Linux"
 node_pool_os_version  = "7.9"
+worker_nsgs           = []
 worker_type           = "private"
 
 # upgrade of existing node pools
