--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -33,7 +33,7 @@ ssh_private_key_path = "~/.ssh/id_rsa"
 # networking
 create_drg                   = false
 drg_display_name             = "drg"
-enable_waf                   = false
+
 internet_gateway_route_rules = []
 
 local_peering_gateways = {}
@@ -121,8 +121,8 @@ allow_node_port_access       = false
 allow_worker_internet_access = true
 allow_worker_ssh_access      = false
 cluster_name                 = "oke"
-control_plane_access         = "private"
-control_plane_access_source  = ["0.0.0.0/0"]
+control_plane_type         = "private"
+control_plane_allowed_cidrs  = ["0.0.0.0/0"]
 control_plane_nsgs           = []
 dashboard_enabled            = false
 kubernetes_version           = "v1.20.8"
@@ -159,7 +159,8 @@ node_pool_image_id    = "none"
 node_pool_name_prefix = "np"
 node_pool_os          = "Oracle Linux"
 node_pool_os_version  = "7.9"
-worker_mode           = "private"
+worker_nsgs           = []
+worker_type           = "private"
 
 # upgrade of existing node pools
 upgrade_nodepool        = false
@@ -167,11 +168,13 @@ node_pools_to_drain     = ["np1", "np2"]
 nodepool_upgrade_method = "out_of_place"
 
 # oke load balancers
-lb_subnet_type           = "both"
-preferred_lb_subnet_type = "public"
-public_lb_ports   = [80, 443]
-# use a string to specify a range e.g.
-# public_lb_ports   = [80, 443, "9000-9010"] 
+enable_waf                   = false
+load_balancers               = "both"
+preferred_load_balancer      = "public"
+internal_lb_allowed_cidrs    = ["172.16.1.0/24", "172.16.2.0/24"]
+internal_lb_allowed_ports    = [80, 443, "7001-7005"]
+public_lb_allowed_cidrs      = ["0.0.0.0/0"]
+public_lb_allowed_ports      = [443,"9001-9002"]
 
 # ocir
 email_address    = ""
@@ -216,4 +219,5 @@ freeform_tags = {
   }
 }
 
+# placeholder variable for debugging scripts. To be implemented in future
 debug_mode = false
