Updated copyright headers, docs formatting and instructions.
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,3 +1,6 @@
+# Copyright 2017, 2021 Oracle Corporation and/or affiliates.
+# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl
+
 # Identity and access parameters
 api_fingerprint      = ""
 # api_private_key      = <<EOT
