--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -114,7 +114,8 @@ operator_notification_topic    = ""
 # availability_domains
 availability_domains = {
   bastion  = 1,
-  operator = 1
+  operator = 1,
+  fss = 1
 }
 
 # oke cluster options
@@ -204,6 +205,12 @@ service_account_cluster_role_binding = ""
 
 # fss mount point network provisioning
 enable_fss = false
+
+# fss subnet name
+fss_subnet_name = "fss"
+
+# fss mount path
+fss_mount_path = "/oke_fss"
 
 # freeform_tags
 freeform_tags = {
