Added OPA Gatekeeper

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -181,7 +181,7 @@ preferred_load_balancer      = "public"
 
 # ocir
 email_address    = ""
-secret_id        = ""
+secret_id        = "none"
 secret_name      = "ocirsecret"
 secret_namespace = "default"
 username         = ""
@@ -194,6 +194,10 @@ calico_version = "3.19"
 enable_metric_server = false
 enable_vpa           = false
 vpa_version          = 0.8
+
+#OPA Gatekeeper
+enable_OPA_gatekeeper = false
+OPA_gatekeeper_version = "3.7"
 
 # service account
 create_service_account               = false
