feat: added support for new OCI regions: Milan, Stockholm, Abu Dhabi and Vinhedo
Signed-off-by: Andrea Marchesini <andrea.marchesini@oracle.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ provider.tf
 # .tfstate files
 *.tfstate
 *.tfstate.*
+.terraform.lock.hcl
 
 # .tfvars files
 *.tfvars
@@ -14,3 +15,4 @@ generated/**
 
 # visual code
  **/.vscode/*
+
