--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -104,6 +104,10 @@ operator_state    = "RUNNING"
 operator_timezone = "Australia/Sydney"
 upgrade_operator  = false
 
+### operator volume kms integration
+enable_operator_pv_encryption_in_transit = false
+operator_volume_kms_id = ""
+
 ## operator notification
 enable_operator_notification   = false
 operator_notification_endpoint = ""
