feat: Closes #457. Added support for cloud-init. Updated docs and       added subsections for bastion, operator instructions to make       table of content render better.

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -173,6 +173,7 @@ node_pool_image_id    = "none"
 node_pool_name_prefix = "np"
 node_pool_os          = "Oracle Linux"
 node_pool_os_version  = "7.9"
+node_pool_timezone    = "Australia/Sydney"
 worker_nsgs           = []
 worker_type           = "private"
 
