--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -140,7 +140,7 @@ services_cidr                = "10.96.0.0/16"
 
 ## oke cluster kms integration
 use_encryption = false
-kms_key_id     = ""
+cluster_kms_key_id     = ""
 
 ### oke node pool volume kms integration
 use_node_pool_volume_encryption = false
