Update: variables when no VCN creation
Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

--- a/examples/verrazzano/terraform.tfvars.example
+++ b/examples/verrazzano/terraform.tfvars.example
@@ -19,3 +19,11 @@ ssh_public_key_path  = "~/.ssh/id_rsa.pub"
 
 verrazzano_version = "1.0.3"
 verrazzano_name    = "v8o"
+
+create_vcn                   = false
+vcn_display_name             = ""
+vcn_id                       = ""
+ig_route_table_display_name  = ""
+ig_route_table_id            = ""
+nat_route_table_display_name = ""
+nat_route_table_id           = ""
