--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -142,7 +142,7 @@ services_cidr                = "10.96.0.0/16"
 
 ## oke cluster kms integration
 use_encryption  = false
-kms_key_id      = ""
+cluster_kms_key_id      = ""
 create_policies = true
 
 ## oke cluster container image policy and keys
